# box-ee-client

./: .gitignore  LICENSE  Makefile  README.md  config.json  delete.py  main.py  package_place_edge_client.py  pyproject.toml  requirements.txt  wifi.py
docs/: references
lib/: app.py  lock.py  pinpad.py  repo.py  scanner.py
lib/wireless/: access_point.py  html.py
