[tool.poetry]
name = "edge-compute"
version = "0.1.0"
description = ""
authors = ["esteban <devlabmgmt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
